kubernetes-manifest/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nolimits-embedded
  namespace: nolimits
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nolimits-embedded
  template:
    metadata:
      labels:
        app: nolimits-embedded
    spec:
      containers:
        - name: nolimits-embedded
          image: docker.io/mella7/nolimits-embedded:a0d8fe9df6645fbd17adb9c45204605f8dc438bc
          ports:
            - containerPort: 80
