kubernetes-manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nolimits-service
  namespace: nolimits
spec:
  type: ClusterIP
  selector:
    app: nolimits
  ports:
    - name: http
      port: 80
      targetPort: 3000
