kubernetes-manifest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nolimits-ingress
  namespace: nolimits
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'
spec:
  ingressClassName: alb
  rules:
    - host: mella7.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nolimits-service
                port:
                  number: 80
